Implementation of Classes for mapping
MOVariable to create modelica variables

--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,25 @@
 /bin
 /bin
 /bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
