--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JDOMLib"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JenaLib"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JENALib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
